--- a/newfw/README
+++ b/newfw/README
@@ -1,1 +1,3 @@
-no source yet, needs cleanups first
+some documentation here: https://www.mikrocontroller.net/topic/310148#3649461
+further documentation still missing
+
